// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EcAmountInput > should render properly 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <!--v-if-->
  <input
    autocomplete="off"
    class="ec-input-field__input"
    data-test="ec-amount-input ec-input-field__input"
    id="ec-input-field-1"
    type="text"
  />
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`EcAmountInput > should render with a sensitive class when isSensitive prop is set to true 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <!--v-if-->
  <input
    autocomplete="off"
    class="ec-input-field__input my-sensitive-content-test-class"
    data-test="ec-amount-input ec-input-field__input"
    id="ec-input-field-1"
    type="text"
  />
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`EcAmountInput > should render with custom attributes 1`] = `
<div
  class="ec-input-field my-class"
  data-test="ec-input-field"
>
  <!--v-if-->
  <input
    autocomplete="off"
    class="ec-input-field__input"
    data-test="my-data-test ec-amount-input ec-input-field__input"
    id="test-id"
    type="text"
  />
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>
`;
